test_data/end_to_end/err__impl_inherent_structural/stderr.txt
error: cannot define inherent `impl` for a structural type
  --> main.cz:2:10
2 |     impl {} {}
             ~~

error: cannot define inherent `impl` for a structural type
  --> main.cz:3:10
3 |     impl {String,} {}
             ~~~~~~~~~

error: cannot define inherent `impl` for a structural type
  --> main.cz:4:10
4 |     impl {t: String} {}
             ~~~~~~~~~~~
